--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,28 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
-      # - DEBUG=1 (adicione variáveis extras se quiser)
     env_file:
       - .env
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - monitoring
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "3001:3000"
+    networks:
+      - monitoring
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+
+networks:
+  monitoring:
+    driver: bridge
